# modules/Backend/Http/Controllers/API/Auth/LoginController.php
@@ -10,6 +10,7 @@
 
 namespace Juzaweb\Backend\Http\Controllers\API\Auth;
 
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Juzaweb\Backend\Http\Requests\API\Auth\LoginRequest;
 use Juzaweb\CMS\Http\Controllers\ApiController;
@@ -50,7 +51,7 @@ class LoginController extends ApiController
     {
         $request->authenticate();
     
-        $token = $request->user()->createToken('user');
+        $token = $request->user()->createToken('auth_token');
 
         return $this->respondWithToken($token);
     }
@@ -59,10 +60,22 @@ class LoginController extends ApiController
     {
         return $this->respondWithToken(Auth::guard('api')->refresh());
     }
-
-    public function logout()
+    
+    /**
+     * @OA\Post(
+     *      path="/api/auth/logout",
+     *      tags={"Auth"},
+     *      summary="User logout",
+     *      security={{"sanctum":{}}},
+     *      operationId="api.auth.logout",
+     *      @OA\Response(response=201, ref="#/components/responses/success_detail"),
+     *      @OA\Response(response=422, ref="#/components/responses/error_422"),
+     *      @OA\Response(response=500, ref="#/components/responses/error_500")
+     *  )
+     */
+    public function logout(Request $request)
     {
-        Auth::guard('api')->logout();
+        $request->user()->currentAccessToken()->delete();
 
         return $this->restSuccess([], 'Successfully logged out');
     }
@@ -72,7 +85,7 @@ class LoginController extends ApiController
         return $this->restSuccess(
             [
                 'access_token' => $token->plainTextToken,
-                'token_type' => 'bearer',
+                'token_type' => 'Bearer',
                 //'expires_in' => Auth::guard('api')->factory()->getTTL() * 60,
             ],
             'Successfully login'
